Problema corrigido: referência a tag span da tag h1 definida na folha de estilo do index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 	<title>Hello World</title>
 	<style type="text/css">
-		color: green;
+		.sp1 {
+			color: green;
+		}
 	</style>
 </head>
 <body>
-	<h1>Hello World, <span>GitHUB!!!</span></h1>
+	<h1>Hello World, <span class='sp1'>GitHUB!!!</span></h1>
 </body>
 </html>
