Criação da tag p feita em casa

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
 	<h1>Hello World, <span class='sp1'>GitHUB!!!</span></h1>
+	<p title='Digite "git pull para receber esta atualização no trabalho"'>Este parágrafo foi criado na minha casa</p>
 </body>
 </html>
